Improved coherence in tool parameters naming; updated default global rules; v. 1.4.2
